Info vom Land wurde hinzufügen

--- a/index.html
+++ b/index.html
@@ -26,9 +26,20 @@
             <div class="cities">
 
 
-
+                <!-- <div class="country">
+                    <img src="cloud_89333.png" alt="" class="countryImg">
+                    <div class="countryData">
+                        <h4 class="countryName">
+                            Germany
+                        </h4>
+                        <h5 class="countryRegion">Europa</h5>
+                        <p class="countryCapital">Euro</p>
+                        <p class="countryPop">84 Mil</p>
+                        <div class="countryLang">Deutsch</div>
+                    </div> -->
             </div>
         </div>
+    </div>
     </div>
     <script src="app.js"></script>
 </body>
